add git example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-APP_NAME=LaravelNotas
-DB_CONNECTION=mysql
-...
+APP_NAME=Laravel
+APP_ENV=local
+APP_KEY=base64:v3sr5ac5nxmk6GmgnTXYbOTwBel0N9/tz2D7fcPHFKE=
+APP_DEBUG=true
+APP_URL=http://localhost
+
+API_AUTENTICACION=Doonamis
